--- a/templates/base/template.jinja2
+++ b/templates/base/template.jinja2
@@ -5,5 +5,9 @@
     <link href="/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
   <head>
-  <body>{% block body %}{% endblock %}</body>
+  <body>
+    <div class="container">
+      {% block body %}{% endblock %}
+    </div>
+  </body>
 </html>
