--- a/templates/views/portfolio.jinja2
+++ b/templates/views/portfolio.jinja2
@@ -1,4 +1,5 @@
 {% extends 'base/template.jinja2' %}
+{% block title %}{{ portfolio.name }} - Portfolio{% endblock %}
 {% block body %}
   <h1>Portfolio: {{ portfolio.name }}</h1>
 
