--- a/templates/views/portfolio_history.jinja2
+++ b/templates/views/portfolio_history.jinja2
@@ -1,4 +1,5 @@
 {% extends 'base/template.jinja2' %}
+{% block title %}{{ portfolio.name }} - History{% endblock %}
 {% block body %}
   <h1>History: {{ portfolio.name }}</h1>
 
