Add right alignment for numbers

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -50,6 +50,10 @@ div {
   width: 100%;
 }
 
+.flex-row>.flex-cell {
+  text-align: right;
+}
+
 .flex-cell {
   display: flex;
   flex-direction: column;
