--- a/templates/base/template.jinja2
+++ b/templates/base/template.jinja2
@@ -3,7 +3,7 @@
   <head>
     <title>{% block title %}Finance Manager{% endblock %}</title>
     <link href="/css/main.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Material+Icons&display=swap" rel="stylesheet">
   <head>
   <body>
     <div class="container">
