Add link to Yahoo! Finance for stocks

--- a/templates/views/asset.jinja2
+++ b/templates/views/asset.jinja2
@@ -7,6 +7,9 @@
   </h1>
   <a target="_blank" href="https://www.google.com/search?q=stock+{{ asset.get_id() }}">
     View on Google Finance
+  </a>,
+  <a target="_blank" href="https://finance.yahoo.com/quote/{{ asset.tracker }}/key-statistics?p={{ asset.tracker }}">
+    View on Yahoo! Finance
   </a>
 
   <h2>Balance</h2>
