Add tables to display asset stats
Add stats table block and view to asset stats.

--- a/templates/views/asset.jinja2
+++ b/templates/views/asset.jinja2
@@ -12,6 +12,11 @@
     View on Yahoo! Finance
   </a>
 
+  <h2>Financial Indicators</h2>
+  {% with stats = asset.stats %}
+    {% include 'blocks/asset_stats.jinja2' %}
+  {% endwith %}
+
   <h2>Balance</h2>
   {% with positions_list = [asset_position] %}
     {% include 'blocks/positions_table.jinja2' %}
