Unify asset stats table into one
Remove duplication by combining all stats table into one

--- a/templates/blocks/stats_table.jinja2
+++ b/templates/blocks/stats_table.jinja2
@@ -14,7 +14,7 @@
     <div class="flex-cell" role="columnheader">Revenue Growth</div>
   </div>
 
-  {% for stats in portfolio_stats %}
+  {% for stats in stats_list %}
     <div class="flex-row" role="row">
       <div class="flex-cell" role="cell">
         {% with portfolio = portfolio, asset = stats.asset %}
