Update dividend yield formatting
Dividend yield is not a %, but a ratio.

--- a/templates/blocks/stats_table.jinja2
+++ b/templates/blocks/stats_table.jinja2
@@ -39,7 +39,7 @@
       </div>
       <div class="flex-cell" role="cell">
         {% if stats.dividend_yield %}
-          {{ '{:,.2f}'.format(stats.dividend_yield * 100) }}%
+          {{ '{:,.2f}'.format(stats.dividend_yield) }}
         {% endif %}
       </div>
       <div class="flex-cell" role="cell">
