Add Portfolio "menu" to all views
Requires creating absolute paths instead of relative paths. Eases navigation from different views instead of just relying on the "back" button.

--- a/templates/base/template.jinja2
+++ b/templates/base/template.jinja2
@@ -4,6 +4,7 @@
     <title>{% block title %}Finance Manager{% endblock %}</title>
     <link href="/css/main.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Material+Icons&display=swap" rel="stylesheet">
+    <base href="/">
   <head>
   <body>
     <div class="container">
