--- a/templates/views/portfolio_stats.jinja2
+++ b/templates/views/portfolio_stats.jinja2
@@ -5,7 +5,11 @@
     <a href="/portfolios/{{ portfolio.get_id() }}" class="material-icons">arrow_back</a>
     Stats: {{ portfolio.name }}
   </h1>
+  {% with portfolio = portfolio %}
+    {% include 'blocks/portfolio_menu.jinja2' %}
+  {% endwith %}
 
+  <h2>Stats</h2>
   {% with stats_list = portfolio_stats.values() %}
     {% include 'blocks/stats_table.jinja2' %}
   {% endwith %}
