Order history/operations by date
Current order was random/arbitrary which made it difficult to follow list of opperations. Decision here is to order from recent operations to older operations for easy access (as it's more common to check recent transactions rather than operations years ago).

--- a/templates/blocks/operations_table.jinja2
+++ b/templates/blocks/operations_table.jinja2
@@ -9,7 +9,7 @@
     <div class="flex-cell" role="columnheader">Total</div>
   </div>
 
-  {% for operation in operations_list.values() %}
+  {% for operation in operations_list.values()|sort(attribute='timestamp', reverse=True) %}
     <div class="flex-row" role="row">
       <div class="flex-cell" role="cell">
         {{ operation.timestamp.strftime('%Y-%m-%d %H:%M') }}
