Sort finance positions by aset id
The best order is by ticker. This is stored on a private property, which is not a good practice, but it's the easiest way for Jinja2 to retrieve this information for sorting.

--- a/templates/blocks/positions_table.jinja2
+++ b/templates/blocks/positions_table.jinja2
@@ -16,7 +16,7 @@
     <div class="flex-cell" role="columnheader">Dividend Yield</div>
   </div>
 
-  {% for position in positions_list %}
+  {% for position in positions_list|sort(attribute='asset._id') %}
     <div class="flex-row" role="row">
       <div class="flex-cell" role="cell">
         {% with portfolio = portfolio, asset = position.asset %}
